<resources>
    <string name="app_name">Pick Up App</string>
    <string name="splash_project">splash project</string>
    <string name="textoacessar">Já possui acesso a nossa plataforma, então realize o acesso e parta para o proximo jogo!</string>
    <string name="textocadastro">Ainda não tem cadastro na nossa plataforma? clique no botão a baixo e se torne um membro!</string>
    <string name="acessar">Acessar</string>
    <string name="cadastrar_se">Cadastrar-se</string>
    <string name="logo">logo</string>
    <string name="voc">Você é?</string>
    <string name="jogador">Jogador</string>
    <string name="locador">Locador</string>
    <string name="nome">Nome</string>
    <string name="nome_usuario">Nome_Usuario</string>
    <string name="nome_arbitro">Nome_Arbitro</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="voltar">Voltar</string>
    <string name="deseja_se_cadastrar_como">Deseja se cadastrar como?</string>
    <string name="cadastro_de_espacos">Cadastro de Espaços</string>
    <string name="nome_do_espaco">Nome do espaço</string>
    <string name="telefone">Telefone</string>
    <string name="rua">Rua</string>
    <string name="logradouro">Logradouro</string>
    <string name="numero">Número</string>
    <string name="bairro">Bairro</string>
    <string name="cep">Cep</string>
    <string name="email">Email</string>
    <string name="cidade_">Cidade: </string>
    <string name="estado_">Estado: </string>
    <string name="cadastrar">Cadastrar</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_spaces">Espaços</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quadra">Quadra</string>
    <string name="errorTipo">Selecione o tipo do espaco!</string>
    <string name="valor_por_hora">Valor por hora</string>
    <string name="tipo_de_espa_o">Tipo de espaço:</string>
    <string name="gramado">Gramado</string>
    <string name="society">Society</string>
    <string name="terra">Terra</string>
    <string name="cadastrarespaco">Cadastrar Espaços</string>
    <string name="acessoaomapa">Mapa</string>
    <string name="listarespaco">Listar Espaços</string>
    <string name="sair">sair</string>
    <string name="estado">Estado</string>
    <string name="endere_o">Endereço</string>
    <string name="primeiro_nome">Primeiro_Nome</string>
    <string name="email_list">Email_lista</string>
    <string name="pre_o">Preço</string>
    <string name="title_activity_drawer_jogador">title activity drawer jogador</string>
    <string name="menu_agallery">galerr</string>
    <string name="rbitro">Árbitro</string>
    <string name="buscartimes">Buscar Times</string>
    <string name="meu_time">Meu Time</string>
    <string name="lista_jogadores">Jogadores</string>
    <string name="lista_arbitros">Arbitros</string>
    <string name="visualizar_convites">Visualizar convites</string>
    <string name="reservas">Reservas</string>
    <string-array name="cities_pernambuco">
        <item>Jaboatão dos Guararapes</item>
        <item>Olinda</item>
        <item>Paulista</item>
        <item>Igarassu</item>
        <item>Abreu e Lima</item>
        <item>Camaragibe</item>
        <item>Cabo de Santo Agostinho</item>
        <item>Goiana</item>
        <item>São Lourenço da mata</item>
        <item>Araçoiaba</item>
        <item>Ilha de Itamaracá</item>
        <item>Ipojuca</item>
        <item>Moreno</item>
        <item>Itapissuma</item>
        <item>Recife</item>
    </string-array>

    <string-array name="tipos_espacos">
        <item>Tipo do Espaço</item>
        <item>Quadra</item>
        <item>Grama</item>
        <item>Grama Sintetica</item>
        <item>Terra</item>
    </string-array>

    <string-array name="cities_alagoas">
        <item>Maceió</item>
    </string-array>

    <string-array name="cities_paraiba">
        <item>João Pessoa</item>
    </string-array>

    <string-array name="states">
        <item>Pernambuco</item>
    </string-array>

    <string-array name="tipo_usuario">
        <item>Tipo de Usuario</item>
        <item>Jogador</item>
        <item>Locador</item>
        <item>Árbitro</item>
    </string-array>
</resources>
