<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_locais"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:title="@string/menu_spaces" />

    <item
        android:id="@+id/nov_local"
        android:icon="@drawable/ic_add"
        android:title="@string/menu_tools" />

    <item
        android:id="@+id/nav_new_addspace"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:title="@string/cadastrarespaco" />

    <item
        android:id="@+id/nov_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/sair" />

    </group>


</menu>
