<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.fragments.RegisterSpaceFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#7DDB38"
        android:orientation="vertical"
        android:layout_gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_de_espacos"
            android:textSize="24sp"
            android:textAlignment="center"/>

        <ImageButton
            android:id="@+id/ImageButtonEspaco"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_marginStart="29sp"/>

        <EditText
            android:id="@+id/inputNomeEspaco"
            android:layout_marginTop="10sp"
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:hint="@string/nome_do_espaco"
            android:inputType="textPersonName"
            android:importantForAutofill="no"/>

        <EditText
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:hint="@string/valor_por_hora"
            android:id="@+id/inputValorEspacos"
            android:inputType="number"
            android:importantForAutofill="no"/>

        <EditText
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:hint="@string/telefone"
            android:id="@+id/inputTelefoneEspacos"
            android:inputType="phone"
            android:importantForAutofill="no"/>

        <EditText
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:hint="@string/email"
            android:id="@+id/inputEmailEspacos"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"/>

        <EditText
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:hint="@string/logradouro"
            android:id="@+id/inputLogradouroEspacos"
            android:inputType="textPersonName"
            android:importantForAutofill="no">
        </EditText>

        <EditText
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:hint="@string/numero"
            android:id="@+id/inputNumeroEspacos"
            android:inputType="number"
            android:importantForAutofill="no"/>

        <EditText
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:hint="@string/bairro"
            android:id="@+id/inputBairroEspacos"
            android:inputType="textPersonName"
            android:importantForAutofill="no"/>

        <EditText
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:id="@+id/inputCepEspacos"
            android:hint="@string/cep"
            android:inputType="number"
            android:importantForAutofill="no"/>

        <EditText
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:hint="@string/cidade"
            android:id="@+id/inputCidadeEspacos"
            android:inputType="textPersonName"
            android:importantForAutofill="no"/>

        <EditText
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:hint="@string/estado"
            android:id="@+id/inputEstadoEspacos"
            android:inputType="textPersonName"
            android:importantForAutofill="no"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/radioGroupEspacos">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo_de_espa_o"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RadioButton
                        android:id="@+id/radioGramadoEspacos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gramado"
                        android:checked="true"
                        android:onClick="checkButton"/>
                    <RadioButton
                        android:id="@+id/radioSocietyEspacos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/society"
                        android:onClick="checkButton"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginStart="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RadioButton
                        android:id="@+id/radioQuadraEspacos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quadra"
                        android:onClick="checkButton"/>
                    <RadioButton
                        android:id="@+id/radioTerraEspacos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/terra"
                        android:onClick="checkButton"/>
                </LinearLayout>
            </LinearLayout>
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/buttonVoltarCadastro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:text="@string/voltar" />
            <Button
                android:id="@+id/buttonCadastrarEspaco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="25dp"
                android:background="@android:color/white"
                android:text="@string/cadastrar" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>