<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_jogador"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_locais_jogador"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/menu_spaces" />

        <item
            android:id="@+id/nav_new_maps_acess"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/acessoaomapa" />

        <item
            android:id="@+id/nav_new_teams"
            android:icon="@drawable/ic_add_group"
            android:title="@string/acessoaomapa" />

        <item
            android:id="@+id/nav_new_my_team"
            android:icon="@drawable/ic_group"
            android:title="@string/acessoaomapa" />

        <item
            android:id="@+id/nav_logout_jogador"
            android:icon="@drawable/ic_logout"
            android:title="@string/sair" />

    </group>

</menu>
